--- a/trunk/minibaseOriginal/.classpath
+++ b/trunk/minibaseOriginal/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="com.soyatec.uml.CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="com.soyatec.uml.CONTAINER"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
